--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@parity/hardhat-polkadot": "^0.1.10",
     "dotenv": "^17.2.1",
+    "hardhat": "^2.27.0",
     "solc": "0.8.28"
   }
 }
